pkg/gen/graffle_parser.go
// Code generated from /home/plagamedicum/Documents/yapis/graffle/GraffleParser.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // GraffleParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "", "", "'->'", "'<-'", "'--'", "'='", "'+='", "'-='",
	"'*='", "'/='", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "'('", "')'", "'{'", "'}'", "'['", "']'", "'+'",
	"'-'", "'*'", "'/'", "'.'", "','",
}
var symbolicNames = []string{
	"", "INT", "STRING", "LABEL", "ML_LABEL", "BOOL", "OR_EDGE_LR", "OR_EDGE_RL",
	"UNOR_EDGE", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN",
	"NEQ", "EQUALS", "LESS_THAN", "GR_THAN", "LESS_THAN_E", "GR_THAN_E", "AND",
	"OR", "XOR", "NOR", "NAND", "NOT", "IF", "THEN", "ELSE", "ELIF", "IS",
	"DEFAULT", "WHILE", "UNTIL", "FOR", "IN", "RANGE", "FROM", "TO", "DO",
	"SKIP_ITERATION", "BREAK", "NEWLINE", "BLOCK_BEGIN", "BLOCK_END", "PRINTER",
	"KEY_INPUT", "G_N", "V_N", "E_N", "WHERE", "ID", "WS", "L_PAREN", "R_PAREN",
	"L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", "ADD", "SUB", "MULT", "DIV",
	"ACT_DELIM", "ARG_DELIM", "LINE_COMMENT", "M_LINE_COMMENT",
}

var ruleNames = []string{
	"file", "functions_block", "sequence", "sequence_element", "sequence_line",
	"one_line_sequence_element", "atom_action", "if_stmnt", "else_stmnt", "elif_stmnt",
	"if_is_stmnt", "case_stmnt", "default_stmnt", "one_line_stmnt", "mult_line_stmnt",
	"cycle_stmnt", "while_stmnt", "until_stmnt", "for_stmnt", "from_to_stmnt",
	"function_declaration", "one_line_function_declaration", "mult_line_function_declaration",
	"function_declaration_head", "one_line_procedure_declaration", "mult_line_procedure_declaration",
	"procedure_declaration_head", "var_assign", "vertice_assign", "vertice_type",
	"edge_assign", "edge_type", "edge", "or_w_edge_lr", "or_w_edge_rl", "unor_w_edge",
	"graph_assign", "graph_type", "labeled_assign", "expr", "integral_expr",
	"logical_expr", "log_expr_operand", "bin_log_operator", "unar_log_operator",
	"arithm_expr", "arithm_expr_operand", "bin_arithm_operator", "arithm_assign_operator",
	"builtin_function_call", "built_func_print", "built_func_input", "function_call",
	"label", "value", "variable", "builtin_type", "number_type", "block_end",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type GraffleParser struct {
	*antlr.BaseParser
}

func NewGraffleParser(input antlr.TokenStream) *GraffleParser {
	this := new(GraffleParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "GraffleParser.g4"

	return this
}

// GraffleParser tokens.
const (
	GraffleParserEOF            = antlr.TokenEOF
	GraffleParserINT            = 1
	GraffleParserSTRING         = 2
	GraffleParserLABEL          = 3
	GraffleParserML_LABEL       = 4
	GraffleParserBOOL           = 5
	GraffleParserOR_EDGE_LR     = 6
	GraffleParserOR_EDGE_RL     = 7
	GraffleParserUNOR_EDGE      = 8
	GraffleParserASSIGN         = 9
	GraffleParserADD_ASSIGN     = 10
	GraffleParserSUB_ASSIGN     = 11
	GraffleParserMULT_ASSIGN    = 12
	GraffleParserDIV_ASSIGN     = 13
	GraffleParserNEQ            = 14
	GraffleParserEQUALS         = 15
	GraffleParserLESS_THAN      = 16
	GraffleParserGR_THAN        = 17
	GraffleParserLESS_THAN_E    = 18
	GraffleParserGR_THAN_E      = 19
	GraffleParserAND            = 20
	GraffleParserOR             = 21
	GraffleParserXOR            = 22
	GraffleParserNOR            = 23
	GraffleParserNAND           = 24
	GraffleParserNOT            = 25
	GraffleParserIF             = 26
	GraffleParserTHEN           = 27
	GraffleParserELSE           = 28
	GraffleParserELIF           = 29
	GraffleParserIS             = 30
	GraffleParserDEFAULT        = 31
	GraffleParserWHILE          = 32
	GraffleParserUNTIL          = 33
	GraffleParserFOR            = 34
	GraffleParserIN             = 35
	GraffleParserRANGE          = 36
	GraffleParserFROM           = 37
	GraffleParserTO             = 38
	GraffleParserDO             = 39
	GraffleParserSKIP_ITERATION = 40
	GraffleParserBREAK          = 41
	GraffleParserNEWLINE        = 42
	GraffleParserBLOCK_BEGIN    = 43
	GraffleParserBLOCK_END      = 44
	GraffleParserPRINTER        = 45
	GraffleParserKEY_INPUT      = 46
	GraffleParserG_N            = 47
	GraffleParserV_N            = 48
	GraffleParserE_N            = 49
	GraffleParserWHERE          = 50
	GraffleParserID             = 51
	GraffleParserWS             = 52
	GraffleParserL_PAREN        = 53
	GraffleParserR_PAREN        = 54
	GraffleParserL_CURLY        = 55
	GraffleParserR_CURLY        = 56
	GraffleParserL_BRACKET      = 57
	GraffleParserR_BRACKET      = 58
	GraffleParserADD            = 59
	GraffleParserSUB            = 60
	GraffleParserMULT           = 61
	GraffleParserDIV            = 62
	GraffleParserACT_DELIM      = 63
	GraffleParserARG_DELIM      = 64
	GraffleParserLINE_COMMENT   = 65
	GraffleParserM_LINE_COMMENT = 66
)

// GraffleParser rules.
const (
	GraffleParserRULE_file                            = 0
	GraffleParserRULE_functions_block                 = 1
	GraffleParserRULE_sequence                        = 2
	GraffleParserRULE_sequence_element                = 3
	GraffleParserRULE_sequence_line                   = 4
	GraffleParserRULE_one_line_sequence_element       = 5
	GraffleParserRULE_atom_action                     = 6
	GraffleParserRULE_if_stmnt                        = 7
	GraffleParserRULE_else_stmnt                      = 8
	GraffleParserRULE_elif_stmnt                      = 9
	GraffleParserRULE_if_is_stmnt                     = 10
	GraffleParserRULE_case_stmnt                      = 11
	GraffleParserRULE_default_stmnt                   = 12
	GraffleParserRULE_one_line_stmnt                  = 13
	GraffleParserRULE_mult_line_stmnt                 = 14
	GraffleParserRULE_cycle_stmnt                     = 15
	GraffleParserRULE_while_stmnt                     = 16
	GraffleParserRULE_until_stmnt                     = 17
	GraffleParserRULE_for_stmnt                       = 18
	GraffleParserRULE_from_to_stmnt                   = 19
	GraffleParserRULE_function_declaration            = 20
	GraffleParserRULE_one_line_function_declaration   = 21
	GraffleParserRULE_mult_line_function_declaration  = 22
	GraffleParserRULE_function_declaration_head       = 23
	GraffleParserRULE_one_line_procedure_declaration  = 24
	GraffleParserRULE_mult_line_procedure_declaration = 25
	GraffleParserRULE_procedure_declaration_head      = 26
	GraffleParserRULE_var_assign                      = 27
	GraffleParserRULE_vertice_assign                  = 28
	GraffleParserRULE_vertice_type                    = 29
	GraffleParserRULE_edge_assign                     = 30
	GraffleParserRULE_edge_type                       = 31
	GraffleParserRULE_edge                            = 32
	GraffleParserRULE_or_w_edge_lr                    = 33
	GraffleParserRULE_or_w_edge_rl                    = 34
	GraffleParserRULE_unor_w_edge                     = 35
	GraffleParserRULE_graph_assign                    = 36
	GraffleParserRULE_graph_type                      = 37
	GraffleParserRULE_labeled_assign                  = 38
	GraffleParserRULE_expr                            = 39
	GraffleParserRULE_integral_expr                   = 40
	GraffleParserRULE_logical_expr                    = 41
	GraffleParserRULE_log_expr_operand                = 42
	GraffleParserRULE_bin_log_operator                = 43
	GraffleParserRULE_unar_log_operator               = 44
	GraffleParserRULE_arithm_expr                     = 45
	GraffleParserRULE_arithm_expr_operand             = 46
	GraffleParserRULE_bin_arithm_operator             = 47
	GraffleParserRULE_arithm_assign_operator          = 48
	GraffleParserRULE_builtin_function_call           = 49
	GraffleParserRULE_built_func_print                = 50
	GraffleParserRULE_built_func_input                = 51
	GraffleParserRULE_function_call                   = 52
	GraffleParserRULE_label                           = 53
	GraffleParserRULE_value                           = 54
	GraffleParserRULE_variable                        = 55
	GraffleParserRULE_builtin_type                    = 56
	GraffleParserRULE_number_type                     = 57
	GraffleParserRULE_block_end                       = 58
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraffleParserRULE_file
	return p
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraffleParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) Functions_block() IFunctions_blockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctions_blockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunctions_blockContext)
}

func (s *FileContext) Sequence() ISequenceContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISequenceContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISequenceContext)
}

func (s *FileContext) EOF() antlr.TerminalNode {
	return s.GetToken(GraffleParserEOF, 0)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.EnterFile(s)
	}
}

func (s *FileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.ExitFile(s)
	}
}

func (s *FileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraffleParserVisitor:
		return t.VisitFile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraffleParser) File() (localctx IFileContext) {
	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GraffleParserRULE_file)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(118)
		p.Functions_block()
	}
	{
		p.SetState(119)
		p.Sequence()
	}
	p.SetState(121)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(120)
			p.Match(GraffleParserEOF)
		}

	}

	return localctx
}

// IFunctions_blockContext is an interface to support dynamic dispatch.
type IFunctions_blockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunctions_blockContext differentiates from other interfaces.
	IsFunctions_blockContext()
}

type Functions_blockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctions_blockContext() *Functions_blockContext {
	var p = new(Functions_blockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraffleParserRULE_functions_block
	return p
}

func (*Functions_blockContext) IsFunctions_blockContext() {}

func NewFunctions_blockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Functions_blockContext {
	var p = new(Functions_blockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraffleParserRULE_functions_block

	return p
}

func (s *Functions_blockContext) GetParser() antlr.Parser { return s.parser }

func (s *Functions_blockContext) AllFunction_declaration() []IFunction_declarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFunction_declarationContext)(nil)).Elem())
	var tst = make([]IFunction_declarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFunction_declarationContext)
		}
	}

	return tst
}

func (s *Functions_blockContext) Function_declaration(i int) IFunction_declarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunction_declarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFunction_declarationContext)
}

func (s *Functions_blockContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(GraffleParserNEWLINE)
}

func (s *Functions_blockContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(GraffleParserNEWLINE, i)
}

func (s *Functions_blockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Functions_blockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Functions_blockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.EnterFunctions_block(s)
	}
}

func (s *Functions_blockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.ExitFunctions_block(s)
	}
}

func (s *Functions_blockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraffleParserVisitor:
		return t.VisitFunctions_block(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraffleParser) Functions_block() (localctx IFunctions_blockContext) {
	localctx = NewFunctions_blockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GraffleParserRULE_functions_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(129)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(124)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == GraffleParserNEWLINE {
				{
					p.SetState(123)
					p.Match(GraffleParserNEWLINE)
				}

			}
			{
				p.SetState(126)
				p.Function_declaration()
			}

		}
		p.SetState(131)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}

	return localctx
}

// ISequenceContext is an interface to support dynamic dispatch.
type ISequenceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSequenceContext differentiates from other interfaces.
	IsSequenceContext()
}

type SequenceContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySequenceContext() *SequenceContext {
	var p = new(SequenceContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraffleParserRULE_sequence
	return p
}

func (*SequenceContext) IsSequenceContext() {}

func NewSequenceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SequenceContext {
	var p = new(SequenceContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraffleParserRULE_sequence

	return p
}

func (s *SequenceContext) GetParser() antlr.Parser { return s.parser }

func (s *SequenceContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(GraffleParserNEWLINE)
}

func (s *SequenceContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(GraffleParserNEWLINE, i)
}

func (s *SequenceContext) AllSequence_element() []ISequence_elementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISequence_elementContext)(nil)).Elem())
	var tst = make([]ISequence_elementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISequence_elementContext)
		}
	}

	return tst
}

func (s *SequenceContext) Sequence_element(i int) ISequence_elementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISequence_elementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISequence_elementContext)
}

func (s *SequenceContext) AllEOF() []antlr.TerminalNode {
	return s.GetTokens(GraffleParserEOF)
}

func (s *SequenceContext) EOF(i int) antlr.TerminalNode {
	return s.GetToken(GraffleParserEOF, i)
}

func (s *SequenceContext) AllACT_DELIM() []antlr.TerminalNode {
	return s.GetTokens(GraffleParserACT_DELIM)
}

func (s *SequenceContext) ACT_DELIM(i int) antlr.TerminalNode {
	return s.GetToken(GraffleParserACT_DELIM, i)
}

func (s *SequenceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SequenceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SequenceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.EnterSequence(s)
	}
}

func (s *SequenceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.ExitSequence(s)
	}
}

func (s *SequenceContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraffleParserVisitor:
		return t.VisitSequence(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraffleParser) Sequence() (localctx ISequenceContext) {
	localctx = NewSequenceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GraffleParserRULE_sequence)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(133)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == GraffleParserNEWLINE {
		{
			p.SetState(132)
			p.Match(GraffleParserNEWLINE)
		}

	}
	p.SetState(144)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la-26)&-(0x1f+1)) == 0 && ((1<<uint((_la-26)))&((1<<(GraffleParserIF-26))|(1<<(GraffleParserWHILE-26))|(1<<(GraffleParserUNTIL-26))|(1<<(GraffleParserFOR-26))|(1<<(GraffleParserFROM-26))|(1<<(GraffleParserPRINTER-26))|(1<<(GraffleParserKEY_INPUT-26))|(1<<(GraffleParserID-26)))) != 0) {
		{
			p.SetState(135)
			p.Sequence_element()
		}
		p.SetState(142)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case GraffleParserNEWLINE, GraffleParserACT_DELIM:
			p.SetState(137)
			p.GetErrorHandler().Sync(p)
			_alt = 1
			for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
				switch _alt {
				case 1:
					{
						p.SetState(136)
						_la = p.GetTokenStream().LA(1)

						if !(_la == GraffleParserNEWLINE || _la == GraffleParserACT_DELIM) {
							p.GetErrorHandler().RecoverInline(p)
						} else {
							p.GetErrorHandler().ReportMatch(p)
							p.Consume()
						}
					}

				default:
					panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
				}

				p.SetState(139)
				p.GetErrorHandler().Sync(p)
				_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
			}

		case GraffleParserEOF:
			{
				p.SetState(141)
				p.Match(GraffleParserEOF)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(146)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISequence_elementContext is an interface to support dynamic dispatch.
type ISequence_elementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSequence_elementContext differentiates from other interfaces.
	IsSequence_elementContext()
}

type Sequence_elementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySequence_elementContext() *Sequence_elementContext {
	var p = new(Sequence_elementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraffleParserRULE_sequence_element
	return p
}

func (*Sequence_elementContext) IsSequence_elementContext() {}

func NewSequence_elementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Sequence_elementContext {
	var p = new(Sequence_elementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraffleParserRULE_sequence_element

	return p
}

func (s *Sequence_elementContext) GetParser() antlr.Parser { return s.parser }

func (s *Sequence_elementContext) If_stmnt() IIf_stmntContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIf_stmntContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIf_stmntContext)
}

func (s *Sequence_elementContext) If_is_stmnt() IIf_is_stmntContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIf_is_stmntContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIf_is_stmntContext)
}

func (s *Sequence_elementContext) Mult_line_stmnt() IMult_line_stmntContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMult_line_stmntContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMult_line_stmntContext)
}

func (s *Sequence_elementContext) Sequence_line() ISequence_lineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISequence_lineContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISequence_lineContext)
}

func (s *Sequence_elementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Sequence_elementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Sequence_elementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.EnterSequence_element(s)
	}
}

func (s *Sequence_elementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraffleParserListener); ok {
		listenerT.ExitSequence_element(s)
	}
}

func (s *Sequence_elementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraffleParserVisitor:
		return t.VisitSequence_element(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraffleParser) Sequence_element() (localctx ISequence_elementContext) {
	localctx = NewSequence_elementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GraffleParserRULE_sequence_element)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()
